--- a/index.html
+++ b/index.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    
-    <title>Score keeper</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
-</head>
-<body>
-<h1> 
-    <span id="p1display">0</span> to <span id ="p2display">0</span>
-</h1>
+    <head>
+        <title>Score keeper</title>
+        <link rel="stylesheet" href="style.css" type="text/css" />
+    </head>
+    <body>
+        <div class="container">
+            <div class="inner-container">
+                <div class="score">
+                    <h1>
+                        <span id="p1display">0</span> :
+                        <span id="p2display">0</span>
+                    </h1>
+                </div>
 
-<p>Playing to: <span>5</span></p>
+                <p>Game of: <span>5</span></p>
 
-<input type="number">
-<button id="p1">Player one</button>
-<button id="p2">Player two</button>
-<button id="reset">Reset</button>
-
-<script src="script.js" type="text/javascript"></script>
-    
-</body>
+                <input class="input" type="number" placeholder="Enter Number of Games"/>
+                <br>
+                <div class="player-button">
+                    <button id="p1">Player One</button>
+                    <button id="p2">Player Two</button>
+                </div>
+                <br>
+                <button id="reset">Reset</button>
+            </div>
+        </div>
+        <script src="script.js" type="text/javascript"></script>
+    </body>
 </html>
