--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Score keeper</title>
+        <title>Score Keeper</title>
         <link rel="stylesheet" href="style.css" type="text/css" />
     </head>
     <body>
